--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -11,7 +11,7 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#E8E8E8"
+        android:background="@drawable/estadio"
         tools:context=".MainActivity">
 
         <EditText
@@ -21,7 +21,8 @@
             android:hint="@string/equipo_local"
             android:text=""
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white_transp"
             android:textSize="34sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -40,7 +41,9 @@
             android:backgroundTint="@color/grey"
             android:selectAllOnFocus="false"
             android:text="@string/_1subtractionLocal"
+            android:textColor="@color/white"
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/image_football"
             app:layout_constraintEnd_toStartOf="@+id/result_local"
             app:layout_constraintHorizontal_bias="0.036"
@@ -55,14 +58,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/_0resultLocal"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="60sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/text_visit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_local"
-            app:layout_constraintVertical_bias="0.002" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/button2"
@@ -74,6 +77,7 @@
             android:selectAllOnFocus="false"
             android:text="@string/_1additionLocal"
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/image_football"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.964"
@@ -92,6 +96,7 @@
             android:selectAllOnFocus="false"
             android:text="@string/_1subtractionVisit"
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/text_visit"
             app:layout_constraintEnd_toStartOf="@+id/result_visit"
             app:layout_constraintHorizontal_bias="0.0"
@@ -107,7 +112,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:text="@string/_0resultVisit"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="60sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/text_visit"
@@ -126,6 +131,7 @@
             android:selectAllOnFocus="false"
             android:text="@string/_1additionVisit"
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/text_visit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -141,7 +147,8 @@
             android:hint="@string/equipo_visitante"
             android:text=""
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white_transp"
             android:textSize="34sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -153,8 +160,8 @@
 
         <ImageView
             android:id="@+id/image_football"
-            android:layout_width="172dp"
-            android:layout_height="126dp"
+            android:layout_width="131dp"
+            android:layout_height="101dp"
             android:contentDescription="@string/image_football"
             android:src="@drawable/footbol"
             app:layout_constraintBottom_toTopOf="@+id/result_visit"
@@ -171,6 +178,7 @@
             android:backgroundTint="@color/grey"
             android:text="@string/save"
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/button4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/image_football"
